# data-structures-and-algorithms

./: .gitignore  README.md  package-lock.json  pyproject.toml
Data-Structures/linked_list/: README.md  linked_list.py  test_linked_list.py
challenges/array_reverse/: README.md  array_reverse.py  test_array_reverse.py
challenges/balanced_binary_tree/: balanced_binary_tree.py
challenges/eeney_meeney_miney_moe/: README.md  eeney_meeney_miney_moe.py  test_eeney_meeney_miney_moe.py
challenges/fifo_animal_shelter/: README.md  fifo_animal_shelter.py
challenges/fizz_buzz_tree/: README.md
challenges/get_edges/: get_edges.py
challenges/insertion_sort/: README.md
challenges/merge_sort/: merge_sort.py
challenges/multi_bracket_validation/: test_multi_bracket_validation.py
challenges/queue_with_stacks/: README.md  queue_with_stacks.py  test_queue_with_stacks.py
challenges/repeated_word/: test_repeated_word.py
challenges/spiral_matrix_i/: spiral_matrix.py
code-challenges/array_and_string_methods/: challenges-05.test.js
code-challenges/chaining_methods/: challenges-10.test.js
code-challenges/object-keys-values/: challenges-06.test.js
code-challenges/reduce/: challenges-09.test.js
code-challenges/regular-expressions-1/: challenges-04.test.js
code-challenges/sort/: challenges-03.test.js
code-challenges/value-vs-reference/: challenges-02.test.js
data_structures/graph/: README.md  graph.py  test_graph.py
data_structures/linked_list/: linked_list.py  test_linked_list.py
data_structures/stacks_and_queues/: stacks_and_queues.py  (+1 more)
(+3 files in other folders)
