[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.1.0"
description = "Data structures and algorithms"
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
